--- a/index.html
+++ b/index.html
@@ -300,6 +300,40 @@
 <!-- wrap end --> 
 
 <!-- foot -->
+<div class="common_foot">
+ <div class="help_list">
+ <dl class="hl">
+ <dt>澳门自由行</dt>
+ <dd><a href="#" target="_blank">澳门套牌</a><a href="#" target="_blank">澳门套牌</a></dd>
+ <dd><a href="#" target="_blank">澳门套牌</a><a href="#" target="_blank">澳门套牌</a></dd>
+ <dd><a href="#" target="_blank">澳门套牌</a><a href="#" target="_blank">澳门套牌</a></dd>
+ </dl>
+ <dl class="hl">
+ <dt>澳门自由行</dt>
+ <dd><a href="#" target="_blank">澳门套牌</a><a href="#" target="_blank">澳门套牌</a></dd>
+ <dd><a href="#" target="_blank">澳门套牌</a><a href="#" target="_blank">澳门套牌</a></dd>
+ <dd><a href="#" target="_blank">澳门套牌</a><a href="#" target="_blank">澳门套牌</a></dd>
+ </dl>
+ <dl class="hl">
+ <dt>澳门自由行</dt>
+ <dd><a href="#" target="_blank">澳门套牌</a><a href="#" target="_blank">澳门套牌</a></dd>
+ <dd><a href="#" target="_blank">澳门套牌</a><a href="#" target="_blank">澳门套牌</a></dd>
+ <dd><a href="#" target="_blank">澳门套牌</a><a href="#" target="_blank">澳门套牌</a></dd>
+ </dl>
+ <dl class="il">
+ <dt>购买流程：</dt>
+ <dd><img src="img/foot-bg.jpg" /></dd>
+ </dl>
+ <dl class="il">
+ <dt>服务热线：</dt>
+ <dd>020-88888888</dd>
+ <dd>09:00-21:00</dd>
+ </dl>
+</div>
+ 
+ 
+ 
+</div>
 <!-- foot end -->
 <script type="text/javascript">
     $(document).ready(function(){
