--- a/index.html
+++ b/index.html
@@ -330,6 +330,14 @@
  <dd>09:00-21:00</dd>
  </dl>
 </div>
+
+<div class="ab_foot">
+ <div class="aft">
+ <img class="aft_img dib" src="img/foot-bg2.jpg" />
+ <ul class="aft_note dib"><li>预订酒店</li><li>享受便捷服务</li><li>让你获得更多特价酒店</li><li>到店无房 全责赔付</li><li>订房更加可靠更保障</li></ul>
+ </div>
+
+</div>
  
  
  
