--- a/index.html
+++ b/index.html
@@ -333,8 +333,18 @@
 
 <div class="ab_foot">
  <div class="aft">
- <img class="aft_img dib" src="img/foot-bg2.jpg" />
- <ul class="aft_note dib"><li>预订酒店</li><li>享受便捷服务</li><li>让你获得更多特价酒店</li><li>到店无房 全责赔付</li><li>订房更加可靠更保障</li></ul>
+ <img class="aft_img dib fl" src="img/foot-bg2.jpg" />
+ <ul class="aft_note dib fr"><li>预订酒店</li><li>享受便捷服务</li><li>让你获得更多特价酒店</li><li>到店无房 全责赔付</li><li>订房更加可靠更保障</li></ul>
+ </div>
+ <div class="afb">
+ <ul class="under_line">
+ <li><a href="#" target="_blank">公司简介</a></li><li>|</li>
+ <li><a href="#" target="_blank">联系我们</a></li><li>|</li>
+ <li><a href="#" target="_blank">网站地图</a></li><li>|</li>
+ <li><a href="#" target="_blank">服务说明</a></li><li>|</li>
+ <li><a href="#" target="_blank">友情连接</a></li>
+ </ul>
+ <p>版權所有 © 2014 游澳假期旅行社有限公司. Powered by Zen Cart</p>
  </div>
 
 </div>
